bug#25746 ndb: 4209 error with 2 VARCHAR primary keys - post review changes